theory/ds1307_i2c_psoc4/ds1307_i2c_psoc4.cydsn/BUILD.log
--------------- Build Started: 08/25/2022 11:20:37 Project: ds1307_i2c_psoc4, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:25:5: error: expected identifier or '(' before '}' token
     }
     ^
main.c:33:1: error: expected declaration or statement at end of input
 }
 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 08/25/2022 11:20:39 ---------------
